css/jquery.terminal-src.css
/*!
 *       __ _____                     ________                              __
 *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
 *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
 * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
 * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
 *           \/              /____/                              version {{VER}}
 * http://terminal.jcubic.pl
 *
 * This file is part of jQuery Terminal.
 *
 * Copyright (c) 2011-2021 Jakub Jankiewicz <https://jcubic.pl/me>
 * Released under the MIT license
 *
 * Date: {{DATE}}
 */

.terminal .terminal-output .format, .cmd .format,
.cmd-prompt, .cmd-prompt div {
    display: inline-block;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6, .terminal pre, .cmd {
    margin: 0;
}
.cmd .cmd-clipboard {
    position: absolute !important;
    left: -16px !important;
    top: 0 !important;
    width: 16px !important;
    height: 16px !important;
    background: transparent !important;
    border: none !important;
    color: transparent !important;
    outline: none !important;
    padding: 0 !important;
    resize: none !important;
    z-index: 1000 !important;
    overflow: hidden !important;
    white-space: pre !important;
    text-indent: -9999em !important; /* better cursor hiding for Safari and IE */
    top: calc(var(--cursor-line, 0) * var(--size, 1) * 14px) !important;
}

.cmd span.cmd-end-line,
.cmd span.cmd-end-line span,
.cmd div.cmd-end-line span[data-text]:last-child,
.cmd div.cmd-end-line span[data-text]:last-child span,
.cmd textarea,
.cmd .cursor + span:empty {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}
.terminal img, .terminal audio, .terminal object, .terminal canvas {
    cursor: default;
}
.terminal {
    position: relative;
    line-height: initial;
    overflow-y: auto;
    scrollbar-gutter: stable;
}
terminal.terminal-temp {
    visibility: hidden;
}
.terminal {
    contain: content;
}
body.terminal {
    min-height: 100vh;
    height: 100%;
}
html {
    height: 100%;
}
body.terminal, body.full-screen-terminal {
    margin: 0;
    height: 100%;
}
body.full-screen-terminal .terminal {
    height: 100%;
}
.terminal > div.terminal-fill {
    min-height: 100%;
    height: 100%;
}
.terminal > .terminal-resizer, .terminal > .terminal-font .terminal-resizer {
    position: absolute !important;
    top: 0 !important;
    right: 0 !important;
    bottom: 0 !important;
    left: 0 !important;
    overflow: hidden !important;
    pointer-events: none !important;
    z-index: -1 !important;
    height: 100% !important;
    border: none !important;
    padding: 0 !important;
    width: 100% !important;
}
.cmd {
    padding: 0;
    position: relative;
    width: 100%;
    z-index: 300;
}
.terminal .cmd, .terminal .cmd div {
    background: transparent !important;
}
.terminal a[tabindex="1000"],
.terminal a[tabindex="1000"]:active,
.terminal a[tabindex="1000"]:focus {
    outline: none;
}
.terminal .inverted, .cmd.cmd.cmd .inverted,
.terminal .terminal-inverted, .cmd.cmd.cmd .cmd-inverted {
    background-color: #aaa !important;
    color: #000 !important;
}
.terminal .terminal-output > :not(.raw) a[href], .cmd a[href] {
    color: #0F60FF;
    color: var(--link-color, #0F60FF);
    cursor: pointer;
}
.cmd a[href]:not(.terminal-inverted),
.terminal .terminal-output > :not(.raw) a[href]:not(.terminal-inverted) {
    --color: var(--link-color, #0F60FF);
}
.terminal .terminal-output > :not(.raw) a[href].terminal-inverted {
    background: var(--color, #ccc);
}
.terminal .terminal-output > :not(.raw) a[href]:hover, .cmd a[href]:hover {
    background-color: #0F60FF;
    background-color: var(--link-color, #0F60FF) !important;
    color: #000;
    color: var(--background, #000) !important;
    text-decoration: none;
}
.terminal .terminal-output > :not(.raw) a[href] span,
.cmd a[href] span {
    /*
     * shorter and simple solution
     * it's hard to overwrite long :not selector (:not(a span) don't work)
     */
    color: #0F60FF !important;
    --color: var(--link-color, #0F60FF);
    color: var(--link-color, #0F60FF) !important;
    text-decoration: underline;
}

.terminal .terminal-output > :not(.raw) a[href]:hover span,
.cmd a[href]:hover span {
    background-color: #0F60FF !important;
    background-color: var(--link-color, #0F60FF) !important;
    color: #000 !important;
    color: var(--background, #000) !important;
    text-decoration: none;
}
.cmd .cmd-cursor {
    display: inline-block;
}
.cmd .cmd-cursor-line > span,
.cmd .cmd-cursor-line img {
    display: inline-block;
}
.cmd .cmd-cursor.cmd-blink > span[data-text]:not(.emoji):not(.fa):not(.far):not(.fas) span,
.cmd .cmd-cursor.cmd-blink a,
.cmd .cmd-cursor.cmd-blink .fa,
.cmd .cmd-cursor.cmd-blink .far,
.cmd .cmd-cursor.cmd-blink .fas,
.cmd .cmd-cursor .emoji {
        -webkit-animation: terminal-blink 1s infinite linear;
           -moz-animation: terminal-blink 1s infinite linear;
            -ms-animation: terminal-blink 1s infinite linear;
                animation: terminal-blink 1s infinite linear;
}
.bar.terminal .inverted, .bar.cmd .cmd-inverted {
    box-shadow: -2px 0 0 -1px #aaa;
    box-shadow: -2px 0 0 -1px var(--original-color, #aaa);
}
.terminal, .terminal .terminal-output > div > div, .cmd .cmd-prompt {
    display: block;
    height: auto;
}
.terminal .terminal-output > div:not(.raw) div {
    white-space: nowrap;
}
.cmd .cmd-prompt > span, .cmd .cmd-prompt:empty {
    float: left;
}
.cmd [data-text] span, .terminal [data-text] span {
    display: inline-block;
}
/* ... */

